--- a/docker-web-nodejs/views/developers.html
+++ b/docker-web-nodejs/views/developers.html
@@ -21,6 +21,8 @@
                 </li>
                 <li class="active nav-item"><a href="/developers" class="nav-link">Para Desenvolvedores</a>
                 </li>
+                <li class="nav-item"><a href="/clientes" class="nav-link">Lista de Clientes API</a>
+                </li>                
             </ul>
         </div>
     </div>
