--- a/docker-web-nodejs/views/docker.html
+++ b/docker-web-nodejs/views/docker.html
@@ -20,7 +20,9 @@
                 <li class="active nav-item"><a href="/docker" class="nav-link">Container x VM</a>
                 </li>
                 <li class="nav-item"><a href="/developers" class="nav-link">Para Desenvolvedores</a>
-                </li>                
+                </li>
+                <li class="nav-item"><a href="/clientes" class="nav-link">Lista de Clientes API</a>
+                </li>                                
             </ul>
         </div>
     </div>
