--- a/docker-web-nodejs/views/clientes.html
+++ b/docker-web-nodejs/views/clientes.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Lista Clientes</title>
+    <title>Lista de Clientes</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
@@ -36,14 +36,15 @@
 </body>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.18.0/axios.min.js"></script>
 <script>
-  axios.get('http://restapi1.internal.prod.teste.com:3000/clientes')
+  axios.get('http://localhost:3000/api/v1/clientes')
     .then(response => criaListaDinamica(response.data))
     .catch(error => console.log(error))
   const criaListaDinamica = ( clientes ) => {
+    console.log("inicia da busca clientes");
     const ulClientes = document.getElementById('clientes')
-    alunos.map(cliente => {
+    clientes.map(cliente => {
       const listaCliente = document.createElement('li')
-      listaCliente.innerHTML = `Nome: ${cliente.nome}`
+      listaCliente.innerHTML = `Nome: ${cliente.Nome}` + ` ====> CPF (${cliente.CPF})`
       ulClientes.appendChild(listaCliente)
     })
   }
