--- a/docker-web-nodejs/views/index.html
+++ b/docker-web-nodejs/views/index.html
@@ -19,7 +19,7 @@
                 <ul class="nav navbar-nav mr-auto">
                     <li class="active nav-item"><a href="/" class="nav-link">O Docker</a>
                     </li>
-                    <li class="nav-item"><a href="/docker" class="nav-link">Container x VM</a>
+                    <li class="nav-item"><a href="/docker" class="nav-link">Informações</a>
                     </li>
                     <li class="nav-item"><a href="/developers" class="nav-link">Para Desenvolvedores</a>
                     </li>
@@ -31,35 +31,38 @@
     </nav>
     <div class="jumbotron">
         <div class="container">
-            <h1>Quer aprender sobre Docker?</h1>
-            <p>Você está pronto para aprender Docker?</p>
-            <br>
-            <p><a class="btn btn-primary btn-lg" href="/docker" role="button">Clique aqui para comparar Contêineres x Máquinas Virtuais</a>
-            </p>
+            <h1>Quer conhecer como funciona Docker?</h1>
+            <p>Você está pronto?</p>
         </div>
     </div>
     <div class="container">
         <div class="row">
-            <div class="col-lg-8">
-                <h3>Conceitos do Docker</h3>
+            <div class="column">
+                <h3>Conceito</h3>
                 <p>O Docker é uma plataforma para desenvolvedores e administradores de sistemas desenvolverem, implementarem e executarem aplicativos com contêineres. O uso de contêineres do Linux para implantar aplicativos é chamado de contêiner . Os contêineres não são novos, mas seu uso para implantar aplicativos facilmente é.
                 </p>
-                <img src="https://docs.docker.com/get-started/images/laurel-docker-containers.png" alt="Docker">
+                <img src="https://docs.docker.com/get-started/images/laurel-docker-containers.png" alt="Docker" style="width:50%">
             </div>
-        </div>
-        <div class="row">
-            <div class="col-lg-6">
-                <h2>O que é uma imagem?</h2>
-                <p>Uma imagem é um pacote executável que inclui tudo o que é necessário para executar um aplicativo - o código em tempo de execução, bibliotecas, variáveis ​​de ambiente e arquivos de configuração.
+            <div class="column">
+                <h2>Uma imagem é</h2>
+                <p>um pacote executável que inclui tudo o que é necessário para executar um aplicativo - o código em tempo de execução, bibliotecas, variáveis ​​de ambiente e arquivos de configuração.
                 </p>
             </div>            
-            <div class="col-lg-6">
-                <h2>O que é um contêiner?</h2>
-                <p>Um contêiner é uma unidade padrão de software que empacota o código e todas as suas dependências para que o aplicativo seja executado de maneira rápida e confiável de um ambiente de computação para outro.
+            <div class="column">
+                <h2>Um contêiner é</h2>
+                <p>uma unidade padrão de software que empacota o código e todas as suas dependências para que o aplicativo seja executado de maneira rápida e confiável de um ambiente de computação para outro.
                 </p>
             </div>
         </div>
     </div>
+    <div class="jumbotron">
+            <div class="container">
+                <p>Vamos Continuar?</p>
+                <br>
+                <p><a class="btn btn-primary btn-lg" href="/docker" role="button">Clique aqui para mais informações</a>
+                </p>
+            </div>
+        </div>    
 </body>
 
 </html>
