--- a/docker-web-nodejs/views/developers.html
+++ b/docker-web-nodejs/views/developers.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -9,6 +9,7 @@
     <link href="css/styles.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Merriweather:400,700" rel="stylesheet" type="text/css">
 </head>
+<body>
 <nav class="navbar navbar-dark navbar-static-top navbar-expand-md">
     <div class="container">
         <button type="button" class="navbar-toggler collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false"> <span class="sr-only">Toggle navigation</span>
@@ -17,7 +18,7 @@
             <ul class="nav navbar-nav mr-auto">
                 <li class="nav-item"><a href="/" class="nav-link">O Docker</a>
                 </li>
-                <li class="nav-item"><a href="/docker" class="nav-link">Container x VM</a>
+                <li class="nav-item"><a href="/docker" class="nav-link">Informações</a>
                 </li>
                 <li class="active nav-item"><a href="/developers" class="nav-link">Para Desenvolvedores</a>
                 </li>
@@ -27,25 +28,45 @@
         </div>
     </div>
 </nav>
-<div class="jumbotron text-center">
-    <h1>Docker para desenvolvedores</h1>
+<div class="jumbotron">
+    <div class="container">
+        <h1>Conhece o Dockerfile e Docker-Compose?</h1>
+    </div>
 </div>
 <div class="container">
     <div class="row">
-        <div class="col-lg-6">
-            <p>
-                <div class="caption">Criar e implantar novos aplicativos é mais rápido com contêineres. Os contêineres do Docker encerram o software e suas dependências em uma unidade padronizada para desenvolvimento de software que inclui tudo o que ele precisa para executar: código, tempo de execução, ferramentas do sistema e bibliotecas. Isso garante que seu aplicativo sempre será executado da mesma forma e torna a colaboração tão simples quanto o compartilhamento de uma imagem de contêiner.
-                </div>
-                <img src="https://cdn-images-1.medium.com/max/1600/1*xjh1TUq3yKAB-4HWNSCkSQ.png" alt="Docker">
-            </p>
+        <div class="column">
+                <h3>DockerFile para MSSQL</h3>
+            <img src="images/dockerfile-mssql.JPG" alt="mssql" style="width:100%">
         </div>
-        <div class="col-lg-6">
-            <p>
-                <div class="caption">Compose é uma ferramenta para definir e executar aplicativos Docker com vários contêineres. Com Compose, você usa um arquivo YAML para configurar os serviços do seu aplicativo. Então, com um único comando, você cria e inicia todos os serviços da sua configuração.</div>
-                <img src="https://www.mundodocker.com.br/wp-content/uploads/2017/02/compose_swarm.png" alt="Docker e Componse">
+        <div class="column">
+                <h3>DockerFile para Node</h3>
+            <img src="images/dockerfile-web.JPG" alt="web" style="width:100%">
+        </div>
+    </div>
+    <div class="row">
+        <div class="column">
+                <h3>Docker Compose</h3>
+            <img src="images/docker-compose.JPG" alt="compose" style="width:100%">
+        </div>
+        <div class="column">
+            <img src="images/docker-compose2.JPG" alt="compose2" style="width:100%">
+        </div>
+        <div class="column">
+            <img src="images/docker-compose3.JPG" alt="compose3" style="width:100%">
+        </div>
+        <div class="column">
+            <img src="images/docker-compose4.JPG" alt="compose4" style="width:100%">
+        </div>        
+    </div>    
+</div>
+<div class="jumbotron">
+        <div class="container">
+            <h1>Vamos fazer um teste?</h1>
+            <br>
+            <p><a class="btn btn-primary btn-lg" href="/clientes" role="button">Clique aqui para avançar</a>
             </p>
         </div>
     </div>
-</div>
-
+</body>
 </html>
