--- a/docker-web-nodejs/views/docker.html
+++ b/docker-web-nodejs/views/docker.html
@@ -9,6 +9,7 @@
     <link href="css/styles.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Merriweather:400,700" rel="stylesheet" type="text/css">
 </head>
+<body>
 <nav class="navbar navbar-dark navbar-static-top navbar-expand-md">
     <div class="container">
         <button type="button" class="navbar-toggler collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false"> <span class="sr-only">Toggle navigation</span>
@@ -17,7 +18,7 @@
             <ul class="nav navbar-nav mr-auto">
                 <li class="nav-item"><a href="/" class="nav-link">O Docker</a>
                 </li>
-                <li class="active nav-item"><a href="/docker" class="nav-link">Container x VM</a>
+                <li class="active nav-item"><a href="/docker" class="nav-link">Informações</a>
                 </li>
                 <li class="nav-item"><a href="/developers" class="nav-link">Para Desenvolvedores</a>
                 </li>
@@ -27,8 +28,10 @@
         </div>
     </div>
 </nav>
-<div class="jumbotron text-center">
-    <h1>Informações sobre Docker</h1>
+<div class="jumbotron">
+    <div class="container">
+        <h1>Qual a diferença entre contêineres e máquina virtual?</h1>
+    </div>
 </div>
 <div class="container">
     <div class="row">
@@ -46,6 +49,29 @@
             </p>
         </div>
     </div>
+    <div class="row">
+        <div class="col-lg-6">
+            <p>
+                <div class="caption">Criar e implantar novos aplicativos é mais rápido com contêineres. Os contêineres do Docker encerram o software e suas dependências em uma unidade padronizada para desenvolvimento de software que inclui tudo o que ele precisa para executar: código, tempo de execução, ferramentas do sistema e bibliotecas. Isso garante que seu aplicativo sempre será executado da mesma forma e torna a colaboração tão simples quanto o compartilhamento de uma imagem de contêiner.
+                </div>
+                <img src="https://cdn-images-1.medium.com/max/1600/1*xjh1TUq3yKAB-4HWNSCkSQ.png" alt="Docker">
+            </p>
+        </div>
+        <div class="col-lg-6">
+            <p>
+                <div class="caption">Compose é uma ferramenta para definir e executar aplicativos Docker com vários contêineres. Com Compose, você usa um arquivo YAML para configurar os serviços do seu aplicativo. Então, com um único comando, você cria e inicia todos os serviços da sua configuração.</div>
+                <img src="https://www.mundodocker.com.br/wp-content/uploads/2017/02/compose_swarm.png" alt="Docker e Componse">
+            </p>
+        </div>
+    </div>
 </div>
-
+<div class="jumbotron">
+    <div class="container">
+        <p>Vamos Continuar?</p>
+        <br>
+        <p><a class="btn btn-primary btn-lg" href="/developers" role="button">Clique aqui para avançar</a>
+        </p>
+    </div>
+</div>
+</body>
 </html>
