--- a/docker-web-nodejs/views/index.html
+++ b/docker-web-nodejs/views/index.html
@@ -31,16 +31,26 @@
     </nav>
     <div class="jumbotron">
         <div class="container">
-            <h1>Quer conhecer como funciona Docker?</h1>
-            <p>Você está pronto?</p>
+            <h1>Você já conheçe, já utilizou, sabe onde está sendo usado?</h1>
         </div>
     </div>
     <div class="container">
         <div class="row">
             <div class="column">
                 <h3>Conceito</h3>
-                <p>O Docker é uma plataforma para desenvolvedores e administradores de sistemas desenvolverem, implementarem e executarem aplicativos com contêineres. O uso de contêineres do Linux para implantar aplicativos é chamado de contêiner . Os contêineres não são novos, mas seu uso para implantar aplicativos facilmente é.
+                <p>O Docker é uma plataforma para desenvolvedores e administradores de sistemas desenvolverem, implementarem e executarem aplicativos com contêineres
                 </p>
+                <h3>Motivos para utilizar Docker:</h3>
+                <ul>
+                    <li>Imagens Semelhantes em ambientes diferentes</li>
+                    <p>Uma vez que sua aplicação seja transformada em uma imagem Docker, ela pode ser instanciada como container em qualquer ambiente que desejar</p>
+                    <li>Aplicação ou Serviço é um Pacote Fechado, por isto o contêiner na ilusttração</li>
+                    <p>É possível empacotar sua aplicação e suas dependências, distribuir facilmente, diminui a documentação de infraestrutura.</p>
+                    <li>Padronização na construção e versionamento de imagens</li>
+                    <p>Através de arquivos de definição de imagens, pode se garantir o padrão, desenvolvedor pode escolher a versão da imagem que quer trabalhar de forma fácil e rápida.</p>
+                    <li>Infraestrutura em código, mesma linguagem do desenvolvedor</li>
+                    <p>Agora o cara da infraestrutura tem que saber programar.</p>                    
+                </ul>                
                 <img src="https://docs.docker.com/get-started/images/laurel-docker-containers.png" alt="Docker" style="width:50%">
             </div>
             <div class="column">
