--- a/docker-web-nodejs/views/css/styles.css
+++ b/docker-web-nodejs/views/css/styles.css
@@ -51,3 +51,306 @@ div.caption: {
     float: left;
     clear: both;
 }
+
+img {
+	width: 100%;
+	margin-top: 15px;
+	margin-bottom: 15px
+}
+
+p .highlighter-rouge {
+	color: #403e3e;
+	font-weight: 400
+}
+
+.highlighter-rouge {
+	margin-top: 10px;
+	margin-bottom: 10px;
+	color: #386588;
+	max-width: 860px;
+}
+
+.highlighter-rouge pre {
+	margin-left: 0
+}
+
+.highlight table td {
+	padding: 5px
+}
+
+.highlight table pre {
+	margin: 0
+}
+
+.highlight .c,
+.highlight .cd {
+	color: #75715e;
+	font-style: italic
+}
+
+.highlight .p {
+	color: #fff
+}
+
+.highlight .cm {
+	color: #75715e;
+	font-style: italic
+}
+
+.highlight .c1 {
+	color: #75715e;
+	font-style: italic
+}
+
+.highlight .cp {
+	color: #75715e
+}
+
+.highlight .cs {
+	color: #75715e;
+	font-style: italic
+}
+
+.highlight .err {
+	color: #960050;
+	background-color: #1e0010
+}
+
+.highlight .gi {
+	color: #fff;
+	background-color: #324932
+}
+
+.highlight .gd {
+	color: #fff;
+	background-color: #493131
+}
+
+.highlight .ge {
+	color: #000;
+	font-style: italic
+}
+
+.highlight .gr {
+	color: #a00
+}
+
+.highlight .gt {
+	color: #a00
+}
+
+.highlight .gh {
+	color: #999
+}
+
+.highlight .go {
+	color: #888
+}
+
+.highlight .gp {
+	color: #555
+}
+
+.highlight .gu {
+	color: #aaa
+}
+
+.highlight .k,
+.highlight .kv {
+	color: #f9528b
+}
+
+.highlight .kc {
+	color: #66d9ef
+}
+
+.highlight .kd {
+	color: #66d9ef
+}
+
+.highlight .kp {
+	color: #66d9ef
+}
+
+.highlight .kr {
+	color: #66d9ef
+}
+
+.highlight .kt {
+	color: #66d9ef
+}
+
+.highlight .kn {
+	color: #f92672
+}
+
+.highlight .ow {
+	color: #f92672
+}
+
+.highlight .o {
+	color: #f92672
+}
+
+.highlight .mf {
+	color: #ae81ff
+}
+
+.highlight .mh {
+	color: #ae81ff
+}
+
+.highlight .il {
+	color: #ae81ff
+}
+
+.highlight .mi {
+	color: #ae81ff
+}
+
+.highlight .mo {
+	color: #ae81ff
+}
+
+.highlight .m,
+.highlight .mb,
+.highlight .mx {
+	color: #ae81ff
+}
+
+.highlight .se {
+	color: #ae81ff
+}
+
+.highlight .sb {
+	color: #e6db74
+}
+
+.highlight .sc {
+	color: #e6db74
+}
+
+.highlight .sd {
+	color: #e6db74
+}
+
+.highlight .s2 {
+	color: #e6db74
+}
+
+.highlight .sh {
+	color: #e6db74
+}
+
+.highlight .si {
+	color: #e6db74
+}
+
+.highlight .sx {
+	color: #e6db74
+}
+
+.highlight .sr {
+	color: #e6db74
+}
+
+.highlight .s1 {
+	color: #e6db74
+}
+
+.highlight .ss {
+	color: #e6db74
+}
+
+.highlight .s {
+	color: #e6db74
+}
+
+.highlight .na {
+	color: #a6e22e
+}
+
+.highlight .nx {
+	color: #f5980f
+}
+
+.highlight .nc {
+	color: #a6e22e
+}
+
+.highlight .nd {
+	color: #a6e22e
+}
+
+.highlight .ne {
+	color: #a6e22e
+}
+
+.highlight .nf {
+	color: #a6e22e
+}
+
+.highlight .no {
+	color: #66d9ef
+}
+
+.highlight .bp {
+	color: #f8f8f2
+}
+
+.highlight .nb {
+	color: #f8f8f2
+}
+
+.highlight .ni {
+	color: #f8f8f2
+}
+
+.highlight .nn {
+	color: #f8f8f2
+}
+
+.highlight .vc {
+	color: #f8f8f2
+}
+
+.highlight .vg {
+	color: #f8f8f2
+}
+
+.highlight .vi {
+	color: #f8f8f2
+}
+
+.highlight .nv {
+	color: #f8f8f2
+}
+
+.highlight .w {
+	color: #f8f8f2
+}
+
+.highlight .nl {
+	color: #f8f8f2
+}
+
+.highlight .nt {
+	color: #f92672
+}
+
+.highlight {
+	background-color: #52524e;
+	padding: 10px;
+    overflow: auto;
+    font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen,Ubuntu,Cantarell,"Fira Sans","Droid Sans","Helvetica Neue",sans-serif;
+    font-size: 1.2em !important;
+}
+
+.highlight code {
+	color: #fff
+}
+
+h8 {
+	font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen,Ubuntu,Cantarell,"Fira Sans","Droid Sans","Helvetica Neue",sans-serif;
+    font-size: 0.7em !important;
+}
