--- a/docker-web-nodejs/views/developers.html
+++ b/docker-web-nodejs/views/developers.html
@@ -418,7 +418,7 @@ networks:
 		<h2 id="executando-docker-compose">
         <a name="executando-docker-compose"></a>Como executar os comandos Docker Compose?</h2>
         
-		<p>Para realizar o deploy de um arquivo .yml, pdoe se utilizar o comando docker deploy:</p>
+		<p>Para realizar o deploy de um arquivo .yml, pode se se utilizar o comando docker deploy:</p>
 		
         <div class="language-shell highlighter-rouge"><div class="highlight"><pre class="highlight"><code>docker deploy --compose-file docker-compose.yml app
         </code></pre></div></div>
