--- a/docker-web-nodejs/views/index.html
+++ b/docker-web-nodejs/views/index.html
@@ -44,7 +44,7 @@
                 <ul>
                     <li>Imagens Semelhantes em ambientes diferentes</li>
                     <p>Uma vez que sua aplicação seja transformada em uma imagem Docker, ela pode ser instanciada como container em qualquer ambiente que desejar</p>
-                    <li>Aplicação ou Serviço é um Pacote Fechado, por isto o contêiner na ilusttração</li>
+                    <li>Aplicação ou Serviço é um Pacote Fechado, por isto o contêiner na ilustração</li>
                     <p>É possível empacotar sua aplicação e suas dependências, distribuir facilmente, diminui a documentação de infraestrutura.</p>
                     <li>Padronização na construção e versionamento de imagens</li>
                     <p>Através de arquivos de definição de imagens, pode se garantir o padrão, desenvolvedor pode escolher a versão da imagem que quer trabalhar de forma fácil e rápida.</p>
@@ -53,6 +53,10 @@
                 </ul>                
                 <img src="https://docs.docker.com/get-started/images/laurel-docker-containers.png" alt="Docker" style="width:50%">
             </div>
+            <div class="column">
+                <h3>História</h3>
+				<img class="size-full wp-image-2231 aligncenter" src="http://academy.umbler.com/wp-content/uploads/2017/11/timeline-conteiner-caminho.png" alt="a história dos containers até agora" width="780" height="1562" srcset="https://academy.umbler.com/wp-content/uploads/2017/11/timeline-conteiner-caminho.png 780w, https://academy.umbler.com/wp-content/uploads/2017/11/timeline-conteiner-caminho-150x300.png 150w, https://academy.umbler.com/wp-content/uploads/2017/11/timeline-conteiner-caminho-768x1538.png 768w, https://academy.umbler.com/wp-content/uploads/2017/11/timeline-conteiner-caminho-511x1024.png 511w, https://academy.umbler.com/wp-content/uploads/2017/11/timeline-conteiner-caminho-400x801.png 400w, https://academy.umbler.com/wp-content/uploads/2017/11/timeline-conteiner-caminho-200x401.png 200w" sizes="(max-width: 780px) 100vw, 780px">
+            </div>			
             <div class="column">
                 <h2>Uma imagem é</h2>
                 <p>um pacote executável que inclui tudo o que é necessário para executar um aplicativo - o código em tempo de execução, bibliotecas, variáveis ​​de ambiente e arquivos de configuração.
